5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1885_3123.log
== TEST (2019-07-09 10:16:23) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(n):
	m=n[i]
	print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:16:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=n[i]
	print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:17:24) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=sum(n[i])/size(n)
	print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:17:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=sum(n[i])
	print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:18:08) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=sum(n)
	print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:18:26) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum(n)/size(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:20:38) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum((n**-1)/n)**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:20:54) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum((n**-1)/n)**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:21:15) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum(n)/(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:21:28) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum(n)/(size(n))
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:22:53) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum(n)/max(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:23:02) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))

m=sum(n)/max(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:22) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(n):
	m=sum(n)/size(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:51) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(n):
	m=sum(n[i])/size(n)
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:22) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=((n[i]**-1)/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:36) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=((n[i]**-1)/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:56) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(n):
	m=((n[i]**-1)/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:33) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=((sum(n[i]**-1))/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:35:00) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
for i in range(size(n)):
	m=((sum(n[i**-1]))/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:03:27) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))
t=0
while (t<=size(n)):
	m=n[i]**-1/size(n)
	t=t+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:27) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=(sum(n[i])/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:57) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=(sum(n[i])**-1/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:08:45) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:00) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n+1))**-1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:12) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n))**-1
print(m)
	
	
	v=1/2+1/6+1/3+1
	print(v)
-- ERROR:
File "XXXX", line 10
    v=1/2+1/6+1/3+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:17) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n))**-1

	
	
v=1/2+1/6+1/3+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:57) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n))**-1

	
	
v=1/2+1/6+1/3+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:28) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i])**-1)/size(n))**-1

	
	
v=1/2+1+1/3+1/4+1/5
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:12) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]**-1))/size(n))**-1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:21) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]**-1))/size(n))**-1
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((1/sum(n[i]))/size(n))**-1
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:01) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((1/sum(n[i]))/size(n))
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:16) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]))/size(n))
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:29) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]))/size(n))
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:39) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]**-1))/size(n))**-1
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:55) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]))/size(n))**-1
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:15:04) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]))/size(n))
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:15:26) 
-- CODE:
from numpy import*
n=array(eval(input("digite seus numeros: ")))


for i in range(size(n)):
	m=((sum(n[i]))/size(n[i]))
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
